--- a/CSS Assignment.html
+++ b/CSS Assignment.html
@@ -4,6 +4,12 @@
     <title>CSS Assignment</title>
 </head>
 <style type="text/css">
+header{
+    background-color: blue;
+    height: 80px;
+    width: auto;
+    border-radius: 20px;
+}
  </style>
 <body>
  </body>
