--- a/CSS Assignment.html
+++ b/CSS Assignment.html
@@ -10,6 +10,12 @@ header{
     width: auto;
     border-radius: 20px;
 }
+footer{
+    background-color: red;
+    height: 80px;
+    width: auto;
+    border-radius: 20px;
+}
  </style>
 <body>
  </body>
