--- a/CSS Assignment.html
+++ b/CSS Assignment.html
@@ -18,5 +18,10 @@ footer{
 }
  </style>
 <body>
+    <header></header>
+    <div class="midlebody"></div>
+    <div class="rightsidebar"></div>
+    <div class="leftsidebar"></div>
+    <footer></footer>
  </body>
 </html>  
