--- a/CSS Assignment.html
+++ b/CSS Assignment.html
@@ -4,17 +4,34 @@
     <title>CSS Assignment</title>
 </head>
 <style type="text/css">
-header{
-    background-color: blue;
+ header{
+    background-color: rgb(191, 191, 199);
     height: 80px;
     width: auto;
     border-radius: 20px;
-}
+}  
 footer{
     background-color: red;
     height: 80px;
     width: auto;
     border-radius: 20px;
+} 
+.rightsidebar{
+    background-color: yellow;
+    height: 400px;
+    width: 100px;
+    float: right;
+    border-radius: 20px;
+    margin-top: 20px;
+    margin-bottom: 10px;
+}
+.leftsidebar{
+    background-color: skyblue;
+    height: 400px;
+    width: 100px;
+    border-radius: 20px;
+    margin-top: 20px;
+    margin-bottom: 10px;
 }
  </style>
 <body>
