--- a/CSS Assignment.html
+++ b/CSS Assignment.html
@@ -11,7 +11,7 @@
     border-radius: 20px;
 }  
 footer{
-    background-color: red;
+    background-color: rgb(191, 191, 199);
     height: 80px;
     width: auto;
     border-radius: 20px;
