--- a/CSS Assignment.html
+++ b/CSS Assignment.html
@@ -17,7 +17,7 @@ footer{
     border-radius: 20px;
 } 
 .rightsidebar{
-    background-color: yellow;
+    background-color: skyblue;
     height: 400px;
     width: 100px;
     float: right;
