--- a/CSS Assignment.html
+++ b/CSS Assignment.html
@@ -8,34 +8,34 @@
     background-color: rgb(191, 191, 199);
     height: 80px;
     width: auto;
-    border-radius: 20px;
 }  
 footer{
     background-color: rgb(191, 191, 199);
     height: 80px;
     width: auto;
-    border-radius: 20px;
 } 
 .rightsidebar{
     background-color: skyblue;
     height: 400px;
     width: 100px;
     float: right;
-    border-radius: 20px;
-    margin-top: 20px;
+    border-radius: 10px;
+    margin-top: 10px;
     margin-bottom: 10px;
 }
 .leftsidebar{
     background-color: skyblue;
     height: 400px;
     width: 100px;
-    border-radius: 20px;
-    margin-top: 20px;
+    border-radius: 10px;
+    margin-top: 10px;
     margin-bottom: 10px;
 }
  </style>
 <body>
-    <header></header>
+    <header>
+        <center>header </center>
+    </header>
     <div class="midlebody"></div>
     <div class="rightsidebar"></div>
     <div class="leftsidebar"></div>
