--- a/CSS Assignment.html
+++ b/CSS Assignment.html
@@ -31,6 +31,15 @@ footer{
     margin-top: 10px;
     margin-bottom: 10px;
 }
+.midlebody{
+    background-color: orange;
+    height: 400px;
+    width: 480px;
+    margin-left: 110;
+    margin-top: 30px;
+    margin-bottom: 400px;
+    border-radius: 20px;
+}
  </style>
 <body>
     <header>
