--- a/CSS Assignment.html
+++ b/CSS Assignment.html
@@ -34,11 +34,12 @@ footer{
 .midlebody{
     background-color: orange;
     height: 400px;
-    width: 480px;
-    margin-left: 110;
-    margin-top: 30px;
-    margin-bottom: 400px;
-    border-radius: 20px;
+    width: 400px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    
 }
  </style>
 <body>
