--- a/CSS Assignment.html
+++ b/CSS Assignment.html
@@ -40,11 +40,20 @@ footer{
     margin-top: 10px;
     margin-bottom: -310px;   
 }
+.nav-area li{
+    list-style: none;
+}
+.nav-area li{
+    display: inline-block;
+    padding: 0.15px;
+    text-transform: uppercase;
+}
  </style>
 <body>
     <header>
         <center>header </center>
     </header>
+    <div class="nav-area li"></div>
     <div class="midlebody"></div>
     <div class="rightsidebar"></div>
     <div class="leftsidebar"></div>
